<resources>
    <string name="app_name">Santander</string>
    <string name="notifications">Notifications</string>
    <string name="hamburger_menu">Hamburger Menu</string>
    <string name="todo">TODO</string>
    <string name="balance_available">Saldo disponível</string>
    <string name="balance_limit">Saldo + Limite:  </string>
    <string name="check_balance">Ver extrato</string>
    <string name="pix">Pix</string>
    <string name="pay">Pagar</string>
    <string name="transfer">Transferir</string>
    <string name="charge">Cobrar</string>
    <string name="receipts">Comprovantes</string>
    <string name="card_ended_in">Cartão Final</string>
    <string name="santander_logo">Santander Logo</string>
    <string name="hello">Olá,</string>
</resources>