<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:buttonGravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/main_menu"
        app:navigationIcon="@drawable/ic_baseline_menu_24"
        app:title="">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/santander_logo"
            android:src="@drawable/ic_santander_logo" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        android:contentDescription="@string/todo"
        app:layout_constraintDimensionRatio="H, 16:5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:paddingEnd="@dimen/extra_small_margin"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:text="@string/hello"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text"
        app:layout_constraintStart_toEndOf="@id/tv_hello"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="Jessyca" />

    <TextView
        android:id="@+id/tv_branch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user"
        tools:text="Ag 3861" />

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_branch"
        app:layout_constraintTop_toTopOf="@id/tv_branch"
        tools:text="Cc 02009247-8" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_account_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        app:cardElevation="@dimen/extra_small_margin"
        app:layout_constraintDimensionRatio="H, 16:8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_branch">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/standard_margin">

            <ImageView
                android:id="@+id/iv_update_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_update_money_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:text="@string/balance_available"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text"
                app:layout_constraintStart_toEndOf="@id/iv_update_icon"
                app:layout_constraintTop_toTopOf="@id/iv_update_icon" />

            <ImageView
                android:id="@+id/iv_arrow_up_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_expand_less_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                tools:text="R$ 4.279,95"
                android:textColor="@android:color/black"
                android:textSize="@dimen/extra_large_text"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_update_icon" />

            <TextView
                android:id="@+id/tv_balance_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance_limit"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_balance" />

            <TextView
                android:id="@+id/tv_balance_limit_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text"
                app:layout_constraintStart_toEndOf="@id/tv_balance_limit"
                app:layout_constraintTop_toTopOf="@id/tv_balance_limit"
                tools:text="  R$ 5.317,95" />

            <View
                android:id="@+id/view_card_divisor_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/standard_margin"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_balance_limit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/check_balance"
                android:textAlignment="center"
                android:textColor="@color/redPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_card_divisor_line" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <HorizontalScrollView
        android:id="@+id/hsv_options"
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_account_info">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:foregroundGravity="left">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_pix"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/standard_margin"
                android:gravity="center"
                app:cardElevation="@dimen/extra_small_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_pix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/standard_margin"
                        android:text="@string/pix"
                        app:drawableTopCompat="@drawable/ic_santander_pix"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_pay"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/standard_margin"
                app:cardElevation="@dimen/extra_small_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv_pix"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_pay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/standard_margin"
                        android:text="@string/pay"
                        app:drawableTopCompat="@drawable/ic_santander_barcode" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_transfer"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/standard_margin"
                android:gravity="center"
                app:cardElevation="@dimen/extra_small_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv_pay"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_transfer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/standard_margin"
                        android:text="@string/transfer"
                        app:drawableTopCompat="@drawable/ic_santander_outcomes_24dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_charge"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/standard_margin"
                android:gravity="center"
                app:cardElevation="@dimen/extra_small_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv_transfer"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/standard_margin"
                        android:text="@string/charge"
                        app:drawableTopCompat="@drawable/ic_santander_incomes_24dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_receipts"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:gravity="center"
                app:cardElevation="@dimen/extra_small_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv_charge"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/standard_margin"
                        android:text="@string/receipts"
                        app:drawableTopCompat="@drawable/ic_santander_receipts_24dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </HorizontalScrollView>

    <ImageView
        android:id="@+id/iv_card_ended_in_content"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/standard_margin"
        android:background="@drawable/rounded_corners"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hsv_options" />

    <TextView
        android:id="@+id/tv_card_ended_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:text="@string/card_ended_in"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/iv_card_ended_in_content"
        app:layout_constraintStart_toStartOf="@+id/iv_card_ended_in_content"
        app:layout_constraintTop_toTopOf="@+id/iv_card_ended_in_content" />

    <TextView
        android:id="@+id/tv_card_ended_in_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_card_ended_in_content"
        app:layout_constraintStart_toEndOf="@+id/tv_card_ended_in"
        app:layout_constraintTop_toTopOf="@+id/iv_card_ended_in_content"
        tools:text="0234" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_expand_more_24"
        app:layout_constraintEnd_toEndOf="@+id/iv_card_ended_in_content"
        app:layout_constraintTop_toTopOf="@+id/iv_card_ended_in_content" />

</androidx.constraintlayout.widget.ConstraintLayout>